# SephsBIOME

./: Corrected_Sephs_Biome_Project.md  DockerFile  README (7).md  README (8).md  README (9).md  README.md  README_Final_Version.md  README_Updated_with_Usage.md  README_updated.md  Refined_Sephs_Biome_Project.md  Sephs_Biome_Project.md  Sephs_Biome_README.md  bipedal_robot.py  evolution.py  genome.py  individual.py  main.py  neural_network.py  performanceViz.py  requirements.txt  sensor_data.py  setup_sephsbiome.sh  simulator.py
.github/: README.md
.github/workflows/: SEPHS_sys.yml  main.yml  sephsbiome-workflow.yml
Docker/: Dockerfile  README.md
Docs/: AperiodicSeph.ipynb  Contribute.md  LICENCE.md  MPL_2_0_License.md  README.md  SephsModelV2.ipynb  SephsPulseCheck (1).ipynb  SephsPulseCheck.ipynb
Docs/Misc/: README.md  SEPHSbiome_Aperiodic_Pattern_Integration_Proposal.ipynb  SephsPulseCheck (1).ipynb  model_simulation_notebook.ipynb  wikiREADME.md
Docs/Model/: README (2).md  README.md  SephModelV4.ipynb  SephsModelV2 (3).ipynb  SephsModelV2.ipynb  SephsModelV3.ipynb  synthetic_datasetV2.csv  synthetic_sensor_dataset.csv
Scripts/: README.md  SynthDGen.py  setup_sephsbiome.sh
Scripts/OpenAI_Assistant/: API.py  README.md  Schema.yaml  api.py  api_assistant.sh  schema.py  (+2 more)
src/: Cargo.toml  README.md  bipedal_robot.py  evolution.py  genome.py  individual.py  main.py  neural_network.py  performanceViz.py  sensor_data.py  simulator.py
src/Sephs_GA/: Cargo.toml  README.md  genome.rs  individual.rs  lib.rs
unit_tests/: BR_unittest.py  README.md  ev_unittest.py
(+25 files in other folders)
