[package]
name = "Sephs_GA"
version = "0.1.0"
authors = ["Ant OG <Reel0112358.13@proton.me>"]
edition = "2021"
description = "An advanced and sophisticated genetic algorithm system in Rust for SephsBIOME."
license = "MIT"

[dependencies]
rand = "0.8"
ndarray = "0.15"
rayon = "1.5"
tensorflow = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rosc = "0.5"
log = "0.4"
env_logger = "0.9"

[workspace]
path = "../SephsBIOME-master"
